fake-smtp-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake-smtp-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: mail.test.info
    http:
      paths:
      - path: /admin/(.*)
        pathType: Prefix
        backend:
          service:
            name: fake-smtp-server-admin
            port:
              number: 4437
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: fake-smtp-server-ui
            port:
              number: 4436
